card buffer (fixing type mismatch required)

--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Dou dihzu</title>
+        <title>Dou dizhu</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
